# java-tls13-bug

./: README.md  run.sh
java-client-example/: pom.xml
java-client-example/src/main/java/com/bug/example/client/: Client.java
java-client-example/src/test/java/com/bug/example/client/: ClientTest.java
rust-server-example/: Cargo.toml  ca-cert.pem  client-cert.pem  client-key.pem
rust-server-example/src/: main.rs
