[package]
name = "rust-server-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.22.1"
docopt = "~1.1"
env_logger = "0.10"
log = { version = "0.4.4" }
rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
